# ZePaSt

./: .gitmodules  Makefile.am  README.md  TODO  autogen.sh  configure.ac  test.cpp
src/: Makefile-LIBADD.inc  Makefile.am  absdev-test.c  absdev.c  absdev.h  absdev_test.pc.in  absdev_test_config  isqrt-test.c  isqrt.c  isqrt.h  ivariance-test.c  ivariance.c  ivariance.h  ivariance_test.pc.in  ivariance_test_config  libabsdev.pc.in  libivariance.pc.in  libivariance_config  libmean.pc.in  libmean_config  libpstat.pc.in  libpstat_mulvar.pc.in  libpstat_mulvar_config  libpstat_ngram.pc.in  libpstat_off.pc.in  libpstat_off_config  libstat.pc.in  libstat_off.pc.in  libstat_off_config  libstat_off_diff.pc.in  libstat_off_diff_config  libsum.pc.in  libvariance.pc.in  libvariance_config  libzepast.pc.in  libzepast_config  main.c  mean-test.c  mean.c  mean.h  (+35 more)
